[package]
name = "depstalk"
version = "0.1.0"
description = "Scrape the dependents of a GitHub repository"
authors = ["Arpad Borsos <swatinem@swatinem.de>"]
repository = "https://github.com/Swatinem/depstalk"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.1.10", features = ["derive"] }
reqwest = { version = "0.11.14", features = ["blocking", "gzip"] }
scraper = "0.15.0"
serde = { version = "1.0.157", features = ["derive"] }
serde_json = "1.0.94"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
